--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build && node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,7 +21,19 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "body-parser": "^1.17.2",
+    "chai": "^4.1.1",
+    "chai-http": "^3.0.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "cui": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui.git",
+    "dateformat": "^2.0.0",
+    "express": "^4.15.4",
+    "jsonwebtoken": "^7.4.3",
+    "mocha": "^3.5.0",
+    "mongoose": "^4.11.7",
+    "ng2-charts": "^1.6.0",
+    "ng2-daterangepicker": "^2.0.7",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -44,6 +56,25 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "cui-alert": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-alert.git",
+    "cui-drawers": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-drawers.git",
+    "cui-filter": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-filter.git",
+    "cui-gauge": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-gauge.git",
+    "cui-header": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-header.git",
+    "cui-input": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-input.git",
+    "cui-loader": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-loader.git",
+    "cui-pager": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-pager.git",
+    "cui-pipes": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-pipes.git",
+    "cui-progressbar": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-progressbar.git",
+    "cui-rating": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-rating.git",
+    "cui-search": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-search.git",
+    "cui-select": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-select.git",
+    "cui-services": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-services.git",
+    "cui-sidebar": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-sidebar.git",
+    "cui-steps": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-steps.git",
+    "cui-table": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-table.git",
+    "cui-toast": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-toast.git",
+    "cui-utilities": "git+https://wwwin-gitlab-sjc.cisco.com/cisco-ui-angular-4/cui-utilities.git"
   }
 }
